--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -7,7 +7,7 @@ COPY . .
 RUN npm run build
 
 # Run phase
-FROM nginx:alpine
+FROM nginx
 EXPOSE 3000
 COPY ./nginx/default.conf /etc/nginx/conf.d/default.conf
 COPY --from=0 /app/build /usr/share/nginx/html
